tests/fixtures/invalid/int_none.py
# Cannot call int() with None
x = int(None)
